Triggers-demo/IngressResource/hello-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: el-ingress
  namespace: getting-started
  #annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: event-listener.info
    http:
      paths:
      - path: /
        backend:
          serviceName: el-getting-started-listener
          servicePort: 8080
